# Nonlinear_Solver

./: flake.nix
cpp/: CMakeLists.txt  demo.cpp
cpp/.cache/clangd/index/: demo.cpp.5AEE52CFE027B953.idx  exceptions.hpp.E8DBB2613C9A0D53.idx  solver.cpp.03F8123D3E9A433F.idx  solver.hpp.86B0D14B0882B66B.idx  utils.cpp.9FD21C0B053636D7.idx  utils.hpp.D7750221C59AEF19.idx
cpp/include/nonlinear_solver/: exceptions.hpp  solver.hpp  utils.hpp
cpp/src/: solver.cpp  utils.cpp
cpp/tests/: test_solver.cpp
py/: demo.py
py/nonlinear_solver/: __init__.py  exceptions.py  solvers.py  utils.py
